samples/_failures_safe/1761070488_e64ea8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a81d4955.c: In function ‘main’:
./samples/SAFE/__tmp_a81d4955.c:156:11: error: expected ‘)’ at end of input
  156 |     dfs(&g
      |        ~  ^
      |           )
./samples/SAFE/__tmp_a81d4955.c:156:5: error: too few arguments to function ‘dfs’
  156 |     dfs(&g
      |     ^~~
./samples/SAFE/__tmp_a81d4955.c:98:6: note: declared here
   98 | void dfs(struct Graph *g, int start) {
      |      ^~~
./samples/SAFE/__tmp_a81d4955.c:156:5: error: expected declaration or statement at end of input
  156 |     dfs(&g
      |     ^~~
